@@ -173,26 +173,40 @@ usually a result of a XSLT transformation.</desc>
 
       <commanddef>
         <command><method>asHTML</method> <option>?-channel
-channelId?</option> <option>?-escapeNonASCII?</option> <option>?-htmlEntities?</option> <option>?-doctypeDeclaration &lt;boolean&gt;?</option></command> 
-        <desc>Returns the DOM tree serialized according to HTML rules
+channelId?</option> <option>?-escapeNonASCII?</option> <option>?-htmlEntities?</option> <option>?-doctypeDeclaration &lt;boolean&gt;?</option> <option>?-breakLines?</option> <option>?-onlyContents?</option></command> 
+        <desc><p>Returns the DOM tree serialized according to HTML rules
         (HTML elements are recognized regardless of case, without end
         tags for empty HTML elements etc.) as string or sends the
-        output directly to the given channelId. If the option
-        <m>-escapeNonASCII</m> is given, every non 7 bit ASCII
-        character in attribute values or element PCDATA content will
-        be escaped as character reference in decimal representation.
-        If the option <m>-htmlEntities</m> is given, a character is
+        output directly to the given channelId.</p>
+
+        <p>If the option <m>-escapeNonASCII</m> is given, every non 7
+        bit ASCII character in attribute values or element PCDATA
+        content will be escaped as character reference in decimal
+        representation.</p>
+        
+        <p>If the option <m>-htmlEntities</m> is given, a character is
         written using its HTML 4.01 character entity reference, if it
-        has one. If the flag <m>-doctypeDeclaration</m> is given there
-        will be a DOCTYPE declaration emitted before the first node of
-        the document. The default is, to do not. The DOCTYPE name will
+        has one.</p>
+
+        <p>If the option <m>-breakLines</m> is given the serialization
+        outputs "\n>" instead of ">" for the opening tags of
+        elements.</p>
+
+        <p>If the option <m>-onlyContents</m> is given only all child
+        nodes are serialized. This option is ignored by document
+        nodes.</p>
+        
+        <p>If the flag <m>-doctypeDeclaration</m> is given there will
+        be a DOCTYPE declaration emitted before the first node of the
+        document. The default is, to do not. The DOCTYPE name will
         always be the element name of the document element without
         case normalization. An external entity declaration of the
         external subset is only emitted, if the document has a system
         identifier. The doctype declaration will be written from the
-        available information, without check, if this is a known
-        (w3c) HTML version information or if the document confirms to
-        the given HTML version.</desc>
+        available information, without check, if this is a known (w3c)
+        HTML version information or if the document confirms to the
+        given HTML version. All nodes types other than document nodes
+        ignore this option.</p></desc>
       </commanddef>
 
       <commanddef>
