@@ -2573,7 +2573,9 @@ void tcldom_treeAsHTML (
     int          escapeNonASCII,
     int          htmlEntities,
     int          doctypeDeclaration,
-    int          noEscaping
+    int          noEscaping,
+    int          onlyContents,
+    int          breakLines
 )
 {
     int          empty, scriptTag, outputFlags = 0;
@@ -2615,7 +2617,8 @@ void tcldom_treeAsHTML (
         child = doc->rootNode->firstChild;
         while (child) {
             tcldom_treeAsHTML(htmlString, child, chan, escapeNonASCII,
-                              htmlEntities, doctypeDeclaration, 0);
+                              htmlEntities, doctypeDeclaration, 0, 0,
+                              breakLines);
             child = child->nextSibling;
         }
         return;
@@ -2669,10 +2672,6 @@ void tcldom_treeAsHTML (
     }
 
     tcldom_tolower(node->nodeName, tag, 80);
-    writeChars(htmlString, chan, "<", 1);
-    writeChars(htmlString, chan, tag, -1);
-
-
     /*-----------------------------------------------------------
     |   check for HTML tags, that must be handled special:
     |   empty tags and script tags (todo: HTML tags with
@@ -2699,27 +2698,35 @@ void tcldom_treeAsHTML (
                    !strcmp(tag,"style"))  {scriptTag = 1;} break;
     }
 
+    if (!onlyContents) {
+        writeChars(htmlString, chan, "<", 1);
+        writeChars(htmlString, chan, tag, -1);
 
-    attrs = node->firstAttr;
-    while (attrs) {
-        tcldom_tolower(attrs->nodeName, attrName, 80);
-        writeChars(htmlString, chan, " ", 1);
-        writeChars (htmlString, chan, attrName, -1);
-        writeChars(htmlString, chan, "=\"", 2);
-        tcldom_AppendEscaped(htmlString, chan, attrs->nodeValue, -1,
-                             outputFlags | SERIALIZE_FOR_ATTR);
-        writeChars(htmlString, chan, "\"", 1);
-        attrs = attrs->nextSibling;
+        attrs = node->firstAttr;
+        while (attrs) {
+            tcldom_tolower(attrs->nodeName, attrName, 80);
+            writeChars(htmlString, chan, " ", 1);
+            writeChars (htmlString, chan, attrName, -1);
+            writeChars(htmlString, chan, "=\"", 2);
+            tcldom_AppendEscaped(htmlString, chan, attrs->nodeValue, -1,
+                                 outputFlags | SERIALIZE_FOR_ATTR);
+            writeChars(htmlString, chan, "\"", 1);
+            attrs = attrs->nextSibling;
+        }
+        if (breakLines) {
+            writeChars(htmlString, chan, "\n>", 2);
+        } else {
+            writeChars(htmlString, chan, ">", 1);
+        }
     }
-    writeChars(htmlString, chan, ">", 1);
-
-
+    
     if (empty) {
         /* strange ! should not happen ! */
         child = node->firstChild;
         while (child != NULL) {
             tcldom_treeAsHTML(htmlString, child, chan, escapeNonASCII,
-                              htmlEntities, doctypeDeclaration, scriptTag);
+                              htmlEntities, doctypeDeclaration, scriptTag, 0,
+                              breakLines);
             child = child->nextSibling;
         }
         return;
@@ -2733,7 +2740,8 @@ void tcldom_treeAsHTML (
         }
         while (child != NULL) {
             tcldom_treeAsHTML(htmlString, child, chan, escapeNonASCII,
-                               htmlEntities, doctypeDeclaration, scriptTag);
+                              htmlEntities, doctypeDeclaration, scriptTag, 0,
+                              breakLines);
             child = child->nextSibling;
         }
         if ((node->firstChild != NULL) && (node->firstChild != node->lastChild)
@@ -2741,9 +2749,11 @@ void tcldom_treeAsHTML (
             writeChars(htmlString, chan, "\n", 1);
         }
     }
-    writeChars(htmlString, chan, "</", 2);
-    writeChars(htmlString, chan, tag, -1);
-    writeChars(htmlString, chan, ">",  1);
+    if (!onlyContents) {
+        writeChars(htmlString, chan, "</", 2);
+        writeChars(htmlString, chan, tag, -1);
+        writeChars(htmlString, chan, ">",  1);
+    }
 }
 
 
@@ -3712,22 +3722,24 @@ static int serializeAsHTML (
 {
     char       *channelId;
     int         optionIndex, mode, escapeNonASCII = 0, htmlEntities = 0;
-    int         doctypeDeclaration = 0;
+    int         doctypeDeclaration = 0, onlyContents = 0, breakLines = 0;
     Tcl_Obj    *resultPtr;
     Tcl_Channel chan = (Tcl_Channel) NULL;
 
     static const char *asHTMLOptions[] = {
         "-channel", "-escapeNonASCII", "-htmlEntities", "-doctypeDeclaration",
-        NULL
+        "-onlyContents", "-breakLines", NULL        
     };
     enum asHTMLOption {
-        m_channel, m_escapeNonASCII, m_htmlEntities, m_doctypeDeclaration
+        m_channel, m_escapeNonASCII, m_htmlEntities, m_doctypeDeclaration,
+        m_onlyContents, m_breakLines
     };
     
-    if (objc > 8) {
+    if (objc > 10) {
         Tcl_WrongNumArgs(interp, 2, objv,
                          "?-channel <channelId>? ?-escapeNonASCII? "
-                         "?-htmlEntities? ?-doctypeDeclaration <boolean>?");
+                         "?-htmlEntities? ?-doctypeDeclaration <boolean>? "
+                         "?-onlyContents? ?-breakLines?");
         return TCL_ERROR;
     }
     while (objc > 2) {
@@ -3787,11 +3799,23 @@ static int serializeAsHTML (
             objc -= 2;
             objv += 2;
             break;
+ 
+        case m_onlyContents:
+            onlyContents = 1;
+            objc--;
+            objv++;
+            break;
+
+        case m_breakLines:
+            breakLines = 1;
+            objc--;
+            objv++;
+            break;
         }
     }
     resultPtr = Tcl_NewStringObj("", 0);
     tcldom_treeAsHTML(resultPtr, node, chan, escapeNonASCII, htmlEntities,
-                      doctypeDeclaration, 0);
+                      doctypeDeclaration, 0, onlyContents, breakLines);
     Tcl_AppendResult(interp, Tcl_GetString(resultPtr), NULL);
     Tcl_DecrRefCount(resultPtr);
     return TCL_OK;
