@@ -1,9 +1,9 @@
-C Backouted\s[5a424c365fd7]\sto\srestore\sloading\smodules\sto\stDOM.
-D 2020-08-20T13:53:05.639
+C Added\s-onlyContents\sand\s-breakLines\sto\sasHTML.
+D 2020-08-21T00:07:07.375
 F .fossil-settings/crlf-glob 3fc81610a0f32c43d5830d2e2b08d1a0cbfb74f5
 F .fossil-settings/ignore-glob bdfbbdd88f6c9099755206650cd164eb37aca373
 F .fossil-settings/manifest a09a968bf05a50058f3ad50132730b719bc39e76
-F CHANGES 5f4922852e93c1311974cd4ea84f272cbf97e9812a2204bd0677616dc6947520
+F CHANGES 97c565a0cd22b8e507d58c375ac30949c4992c67a63194e97dc22eced2e7262f
 F ChangeLog 9b60ec8bfbae84e4f1a97aaee24be00ccea212b7
 F LICENSE 7c00b00fe8e88c48498a54c103dd7df03faeeb039c783279d5fb54dfca307b77
 F MPL_2.0.html 326b847674d6f5846c5b260fb437372e21232c23e3911f3a94f766a62459126c
@@ -22,10 +22,10 @@ F doc/dom.n 8679dc2b07eca3e154c6bc1031898ccb04cb4fe7dd0bce009724c8c5d7b04d1f
 F doc/dom.xml 263730cb05f740cc31cee77a8493ac207b3f2ed7b04944cb4a98d36c699cc2b1
 F doc/domDoc.html 56ae549143ca5d49a85d128e4944a1c223b691664ae2910f11f13643280c3e60
 F doc/domDoc.n eef04075235cf5827e7d8951bea36680bc0558922d912bcc33a0f7b9b943a880
-F doc/domDoc.xml 94f8c398a97a4661fc77c99a77eba137a4333b7d2328f48a9c97bcf121c65f3f
+F doc/domDoc.xml 7be95986983fe941ea79e0c05742084b6c1d2dfcceff1b405bf41d3f2560ea63
 F doc/domNode.html 330bb4d39359660009b8afc458c0a4cb4236c6a2e3b1e07cc2fdc4524c436e38
 F doc/domNode.n 365d374f436c3a66d134f6d616f849cd093faa3bc137f96d8fcffa052e79a786
-F doc/domNode.xml b2d5675f81e2b1e2c1abb964ed7ddab19ba8c56a899be57c4c36f7ece3840801
+F doc/domNode.xml 29aab012c2d6a4aa8fe8955c4f04a104f549ea043f61c545cc77ff7359809ef1
 F doc/expat.html db757530cc5fe2f8ba659fc89d2ec789deed2a1b74160ddd9a7850f3edd61c0f
 F doc/expat.n 241a7b7f5062194e08332f7d872d8fc7eda64432f3e2d17a5095d30b8da33f82
 F doc/expat.xml c32fea8c2916212631bed175a9631df4bb7ec783a5e7d4bd153fe5f2e873e387
@@ -125,7 +125,7 @@ F generic/domxslt.h 0cb8e327683a0ffeb2a7094add6cd82ec1ae49c7c704f20d8d6f7d6523e7
 F generic/expat_config.h 560c148d431f87fc99ae8553cf998f0d01b0db82
 F generic/nodecmd.c ee14ed666ca6d18977f7301545c52ac71b3ce73c49233ff8f8b3aa4144008d24
 F generic/nodecmd.h d2201b69de9507f86e94750f0b72867ec9150795712ef18c5b5b87f35a689f75
-F generic/tcldom.c 1741463184c916f29abd5141c6685e684a3cd82858fd859e3f09ab819992f7dc
+F generic/tcldom.c 6a79ac8dec661b35cc05131f5849b9fa393647d4ef9ef6f911abdc3ea3470388
 F generic/tcldom.h afa34c95c821b0f7401853e7bd8c1ff344d8e1640982b7ec250228601dd46e76
 F generic/tclexpat.c 0f4c1220c6c07199a63942616fb31e0eebff421ad85eb66a09b2d1aabbecc20f
 F generic/tclexpat.h 79502484629c99554b998df93e178a69d8484a851ca5739616a37423c2de7d60
@@ -175,7 +175,7 @@ F tests/decls.test 06d0ba0cbc18e26a1524cb17a6ef9adf2a0fc864
 F tests/doctype.test 015c514bd8919467c1074dc3068a527abb3988b5
 F tests/dom.bench 5446ce379127b8d5700f18a5a0848e580313d0d7
 F tests/dom.test 854e2723ac723079021bbc6d60a418e747bd0dac50de4240bd861f25701a4aef
-F tests/domDoc.test e15c2b9d66901c65830ee4f92944f2f52d22209c85f359c7dc4128009e0722a8
+F tests/domDoc.test 7b8b5164c0fc347c5f3234dea91ac630dbcb429ce7afa5d6ce5fd04c370c1565
 F tests/domNode.bench 3d457513be7908bab88ac0e23e1864f7341e3090
 F tests/domNode.test 4c53cbeb4323610f52e4b6d3ff4ca9336fa7b61f9f78d90a2aea391d60d3f5f6
 F tests/domjson.test bdfbe938f33931f56f9496aac425b2183373f4cb926b95a04fa095bd3b75cd3d
@@ -216,9 +216,8 @@ F xe/README 91626be10fa0b48c38184bb73b09eea074008fb082559eaf5c0fb8bb83997903
 F xe/xe 075a1f1c4a5758222c52a4688f9fe22dc3d925e366316cf50d84501c9ca3fdb1 x
 F xe/xe-input fb58cbefe5e3acceb9567a165ef7e655ad08b44e
 F xe/xe.bat 8622c5a70666a58d2316df568354c70593848098
-P a55a95ca7fc947b556f2260666fb5575757cba320a3d3510ff81fb884e129406
-Q -5a424c365fd7741e6fca3d1d8e12034113deb7006cfb61fe179da1cb28fc05e9
-R 4812431e709bacd9431fff8aca7787ca
+P 41812bb9133a83d47df859500ed6d3ce600ec205a90bd77abffa2c4c56801eef
+R eaf643bb4f11c095e3045fcbb07101b5
 U rolf
-Z f73c481cd6cdeace1af85ead330cff0f
+Z 166a46045f42bc3d4fea02547eec69f2
 # Remove this line to create a well-formed Fossil manifest.
